Fix table alignment

--- a/management/ui-common/ui.css
+++ b/management/ui-common/ui.css
@@ -28,3 +28,7 @@
 .clickme:hover {
     background-color: var(--hover-bg-color);
 }
+
+.h-1 {
+    height: 1em;
+}
